[gd_scene load_steps=11 format=3 uid="uid://drfqlh7nr5s8c"]

[ext_resource type="Script" path="res://Game V2/scripts/check_box.gd" id="1_mlf2d"]
[ext_resource type="Texture2D" uid="uid://dao0dpolxtl7y" path="res://Game V2/Sprites/palette sq frame.png" id="2_vrcig"]
[ext_resource type="Shader" path="res://Game V2/scripts/Shaders/color_swap.gdshader" id="3_dvybo"]
[ext_resource type="Texture2D" uid="uid://bowlrcam4nqjl" path="res://Game V2/Sprites/palette sq hover frame.png" id="4_8agow"]
[ext_resource type="Texture2D" uid="uid://wjkw48pnwkr2" path="res://Game V2/Sprites/Checkbox checkmark.png" id="5_e3yuv"]
[ext_resource type="Script" path="res://Game V2/scripts/Background.gd" id="6_1vfge"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ntp3x"]
shader = ExtResource("3_dvybo")
shader_parameter/target_color_1 = null
shader_parameter/replace_color_1 = null
shader_parameter/target_color_2 = null
shader_parameter/replace_color_2 = null
shader_parameter/tolerance = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ol66x"]
shader = ExtResource("3_dvybo")
shader_parameter/target_color_1 = null
shader_parameter/replace_color_1 = null
shader_parameter/target_color_2 = null
shader_parameter/replace_color_2 = null
shader_parameter/tolerance = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_86lp1"]
shader = ExtResource("3_dvybo")
shader_parameter/target_color_1 = null
shader_parameter/replace_color_1 = null
shader_parameter/target_color_2 = null
shader_parameter/replace_color_2 = null
shader_parameter/tolerance = null

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eymwm"]

[node name="CheckBox" type="Node2D"]
script = ExtResource("1_mlf2d")

[node name="Border" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ntp3x")
texture = ExtResource("2_vrcig")
script = ExtResource("6_1vfge")

[node name="Hover_border" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
material = SubResource("ShaderMaterial_ol66x")
texture = ExtResource("4_8agow")

[node name="Checked" type="Sprite2D" parent="."]
visible = false
z_index = 2
material = SubResource("ShaderMaterial_86lp1")
texture = ExtResource("5_e3yuv")
script = ExtResource("6_1vfge")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_eymwm")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
